# qemu

./: .clangd  .gitignore  .gitmodules  Dockerfile  Makefile  README.md
patches/: libvfio-user-gcc-14  qemu-memfd-small-memory  quiltrc  series  vfio-user-pcie-endpoint-controller
qemu/: Kconfig.host  meson.build  meson_options.txt
qemu/hw/misc/: Kconfig  meson.build  qemu-epc.c
qemu/hw/pci/: Kconfig  meson.build
qemu/hw/pci/epc/: Kconfig  epc.c  epc_core.c  epc_mem.c  epc_regs.c  epc_vfu.c  meson.build  qemu_epc.h  trace-events  trace.h
qemu/include/hw/pci/: pci.h
qemu/scripts/: meson-buildoptions.sh
qemu/subprojects/: libvfio-user.wrap
qemu/system/: physmem.c
